Colaboratory를 통해 생성됨 - Pandas의 집계함수

--- a/Class4.ipynb
+++ b/Class4.ipynb
@@ -3953,9 +3953,269 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "KoL4gNkHxsHZ"
+      },
+      "source": [
+        "### 데이터의 그룹화"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "kzyUMDUcxiHB"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kzyUMDUcxiHB",
+        "outputId": "210ce51a-6e4c-4ff9-e194-e82331884f2f"
+      },
+      "source": [
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "\n",
+        "# 실습 데이터 생성\n",
+        "sample = {'product': ['a', 'b', 'a', 'b', 'a', 'b', 'a', 'a'], \n",
+        "          'sensor': ['s1', 's1', 's2', 's3', 's2', 's2', 's1', 's3'], \n",
+        "          'x' : np.arange(1,9), \n",
+        "          'y' : np.arange(5, 13)}\n",
+        "\n",
+        "df = pd.DataFrame(data = sample)\n",
+        "print(df)"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "  product sensor  x   y\n",
+            "0       a     s1  1   5\n",
+            "1       b     s1  2   6\n",
+            "2       a     s2  3   7\n",
+            "3       b     s3  4   8\n",
+            "4       a     s2  5   9\n",
+            "5       b     s2  6  10\n",
+            "6       a     s1  7  11\n",
+            "7       a     s3  8  12\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QPJAczmlyKGz",
+        "outputId": "d323694c-32d7-4b6a-c79e-4bce56906233"
+      },
+      "source": [
+        "# product 컬럼 기준으로 그룹화하기\n",
+        "print('\\n#1 groupby-product')\n",
+        "grouped_product = df.groupby('product')\n",
+        "print(grouped_product)"
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "#1 groupby-product\n",
+            "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x7fc316f2c050>\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UZX2tZNoyUz3",
+        "outputId": "b9a4eb08-7097-47ed-c906-02bdc9cc9da9"
+      },
+      "source": [
+        "# grouped_product 에 저장된 key와 value 출력하기\n",
+        "print('\\n#2 key & value') \n",
+        "for key, value in grouped_product :\n",
+        "  print(\"-----------------------\")\n",
+        "  print(\"key :\", key)\n",
+        "  print(\"value :\\n\", value)"
+      ],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "#2 key & value\n",
+            "-----------------------\n",
+            "key : a\n",
+            "value :\n",
+            "   product sensor  x   y\n",
+            "0       a     s1  1   5\n",
+            "2       a     s2  3   7\n",
+            "4       a     s2  5   9\n",
+            "6       a     s1  7  11\n",
+            "7       a     s3  8  12\n",
+            "-----------------------\n",
+            "key : b\n",
+            "value :\n",
+            "   product sensor  x   y\n",
+            "1       b     s1  2   6\n",
+            "3       b     s3  4   8\n",
+            "5       b     s2  6  10\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "sGt6GY6Lynnv",
+        "outputId": "41c3cd6a-1447-4c36-bb7e-e2474ef934ca"
+      },
+      "source": [
+        "# groupby 결과에 집계함수 적용하기\n",
+        "print('\\n#3 groupby-product')\n",
+        "grouped_product = df.groupby('product').sum()\n",
+        "print(grouped_product)"
+      ],
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "#3 groupby-product\n",
+            "          x   y\n",
+            "product        \n",
+            "a        24  44\n",
+            "b        12  24\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NfVt-ONUy6Ys",
+        "outputId": "df13cdff-5b37-43e6-cff8-4a9316ebc6e7"
+      },
+      "source": [
+        "# product, sensor 기준으로 그룹화하기\n",
+        "print('\\n#4 groupby-product, sensor')\n",
+        "grouped_product = df.groupby(['product', 'sensor']).sum()\n",
+        "print(grouped_product)"
+      ],
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "#4 groupby-product, sensor\n",
+            "                x   y\n",
+            "product sensor       \n",
+            "a       s1      8  16\n",
+            "        s2      8  16\n",
+            "        s3      8  12\n",
+            "b       s1      2   6\n",
+            "        s2      6  10\n",
+            "        s3      4   8\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "i77BjtGXzFXZ",
+        "outputId": "903cc044-d4a3-4345-d0ea-c073328fcefb"
+      },
+      "source": [
+        "# 그룹화한 뒤 x 컬럼에 대해서만 집계함수 적용하기\n",
+        "print('\\n#5 groupby-product,sensor')\n",
+        "grouped_product = df.groupby(['product', 'sensor'])['x'].sum()\n",
+        "print(grouped_product)"
+      ],
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "#5 groupby-product,sensor\n",
+            "product  sensor\n",
+            "a        s1        8\n",
+            "         s2        8\n",
+            "         s3        8\n",
+            "b        s1        2\n",
+            "         s2        6\n",
+            "         s3        4\n",
+            "Name: x, dtype: int64\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "X3xHtG2GzTa0",
+        "outputId": "8cb9bae7-f87e-4478-8b7b-c478f661243b"
+      },
+      "source": [
+        "# 그룹화한 뒤 x 컬럼에 대해서만 집계함수 적용하기\n",
+        "print('\\n#6 groupby-product, sensor')\n",
+        "condition = {'x':'max', 'y':'min'}\n",
+        "grouped_product = df.groupby(['product','sensor']).agg(condition)\n",
+        "print(grouped_product)"
+      ],
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "#6 groupby-product, sensor\n",
+            "                x   y\n",
+            "product sensor       \n",
+            "a       s1      7   5\n",
+            "        s2      5   7\n",
+            "        s3      8  12\n",
+            "b       s1      2   6\n",
+            "        s2      6  10\n",
+            "        s3      4   8\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qZwWEhs7zkTU"
       },
       "source": [
         ""
