--- a/Class4.ipynb
+++ b/Class4.ipynb
@@ -4213,9 +4213,337 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "tbzHldsVztJ4"
+      },
+      "source": [
+        "## 데이터 합치기(1)"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "qZwWEhs7zkTU"
+      },
+      "source": [
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "\n",
+        "# 실습 데이터 생성\n",
+        "df1 = pd.DataFrame({'A': ['A0', 'A1', 'A2', 'A3'], \n",
+        "                    'B': ['B0', 'B1', 'B2', 'B3'], \n",
+        "                    'C': ['C1', 'C1', 'C2', 'C3'], \n",
+        "                    'D': ['D0', 'D1', 'D2', 'D3']}, \n",
+        "                    index=[0, 1, 2, 3])\n",
+        "\n",
+        "df2 = pd.DataFrame({'A': ['A4', 'A5', 'A6', 'A7'], \n",
+        "                    'B': ['B4', 'B5', 'B6', 'B7'], \n",
+        "                    'C': ['C4', 'C5', 'C6', 'C7'], \n",
+        "                    'D': ['D4', 'D5', 'D6', 'D7']}, \n",
+        "                    index=[4, 5, 6, 7])\n",
+        "\n",
+        "df3 = pd.DataFrame({'A': ['A8', 'A9', 'A10', 'A11'], \n",
+        "                    'B': ['B8', 'B9', 'B10', 'B11'], \n",
+        "                    'C': ['C8', 'C9', 'C10', 'C11'], \n",
+        "                    'D': ['D8', 'D9', 'D10', 'D11']}, \n",
+        "                    index=[8, 9, 10, 11])\n",
+        "\n",
+        "df4 = pd.DataFrame({'B': ['B2', 'B3', 'B6', 'B7'], \n",
+        "                    'D': ['D2', 'D3', 'D6', 'D7'], \n",
+        "                    'F': ['F2', 'F3', 'F6', 'F7']}, \n",
+        "                    index=[2, 3, 6, 7])"
+      ],
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_5nxg-5B0PFV",
+        "outputId": "1c9d501b-f8e4-4ffa-ecf0-bdf025fafe02"
+      },
+      "source": [
+        "# df2, df1 합치기\n",
+        "print('\\n#1 Concat df2, df1')\n",
+        "result = pd.concat([df2, df1])\n",
+        "print(result)"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "#1 Concat df2, df1\n",
+            "    A   B   C   D\n",
+            "4  A4  B4  C4  D4\n",
+            "5  A5  B5  C5  D5\n",
+            "6  A6  B6  C6  D6\n",
+            "7  A7  B7  C7  D7\n",
+            "0  A0  B0  C1  D0\n",
+            "1  A1  B1  C1  D1\n",
+            "2  A2  B2  C2  D2\n",
+            "3  A3  B3  C3  D3\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qosoCuxFCLxH",
+        "outputId": "e79360f4-0ab2-4d3f-b237-68df1535943b"
+      },
+      "source": [
+        "#df2, df1 합치기\n",
+        "print('\\n#1 Concat df2, df1')\n",
+        "result = pd.concat([df2, df1], ignore_index = True)\n",
+        "print(result)"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "#1 Concat df2, df1\n",
+            "    A   B   C   D\n",
+            "0  A4  B4  C4  D4\n",
+            "1  A5  B5  C5  D5\n",
+            "2  A6  B6  C6  D6\n",
+            "3  A7  B7  C7  D7\n",
+            "4  A0  B0  C1  D0\n",
+            "5  A1  B1  C1  D1\n",
+            "6  A2  B2  C2  D2\n",
+            "7  A3  B3  C3  D3\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "erR890bTCY3B",
+        "outputId": "d135484b-5353-4c6d-80a7-6ddec82da0b5"
+      },
+      "source": [
+        "#df2, df1 합치기\n",
+        "print('\\n#1 Concat df2, df1')\n",
+        "result = pd.concat([df2, df1, df3], ignore_index = True)\n",
+        "print(result)"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "#1 Concat df2, df1\n",
+            "      A    B    C    D\n",
+            "0    A4   B4   C4   D4\n",
+            "1    A5   B5   C5   D5\n",
+            "2    A6   B6   C6   D6\n",
+            "3    A7   B7   C7   D7\n",
+            "4    A0   B0   C1   D0\n",
+            "5    A1   B1   C1   D1\n",
+            "6    A2   B2   C2   D2\n",
+            "7    A3   B3   C3   D3\n",
+            "8    A8   B8   C8   D8\n",
+            "9    A9   B9   C9   D9\n",
+            "10  A10  B10  C10  D10\n",
+            "11  A11  B11  C11  D11\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OTHCKJdeCgNy",
+        "outputId": "c36efcc2-7a1c-4f2e-9af7-cdb618c4c55c"
+      },
+      "source": [
+        "#df1, df4 합치기\n",
+        "print('\\n #2 Concat df1, df4')\n",
+        "result = pd.concat([df1, df4])\n",
+        "print(result)"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            " #2 Concat df1, df4\n",
+            "     A   B    C   D    F\n",
+            "0   A0  B0   C1  D0  NaN\n",
+            "1   A1  B1   C1  D1  NaN\n",
+            "2   A2  B2   C2  D2  NaN\n",
+            "3   A3  B3   C3  D3  NaN\n",
+            "2  NaN  B2  NaN  D2   F2\n",
+            "3  NaN  B3  NaN  D3   F3\n",
+            "6  NaN  B6  NaN  D6   F6\n",
+            "7  NaN  B7  NaN  D7   F7\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-zs5LZYACq0_",
+        "outputId": "2328ea10-bf41-4cbb-9d18-e756286b21e0"
+      },
+      "source": [
+        "# 일부 데이터 합치기\n",
+        "print('\\n#3 Concat df1, df4 by slicing')\n",
+        "result = pd.concat([df1[:2], df4[3:]])\n",
+        "print(result)"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "#3 Concat df1, df4 by slicing\n",
+            "     A   B    C   D    F\n",
+            "0   A0  B0   C1  D0  NaN\n",
+            "1   A1  B1   C1  D1  NaN\n",
+            "7  NaN  B7  NaN  D7   F7\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NjoR8TZrC0ar",
+        "outputId": "ef172ff4-9dbf-4845-fa4e-181f1bb1346c"
+      },
+      "source": [
+        "# 행 기준으로 df1, df4 합치기\n",
+        "print('\\n#4 Concat df1, df4 by axis = 1')\n",
+        "result = pd.concat([df1, df4], axis = 1)\n",
+        "print(result)"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "#4 Concat df1, df4 by axis = 1\n",
+            "     A    B    C    D    B    D    F\n",
+            "0   A0   B0   C1   D0  NaN  NaN  NaN\n",
+            "1   A1   B1   C1   D1  NaN  NaN  NaN\n",
+            "2   A2   B2   C2   D2   B2   D2   F2\n",
+            "3   A3   B3   C3   D3   B3   D3   F3\n",
+            "6  NaN  NaN  NaN  NaN   B6   D6   F6\n",
+            "7  NaN  NaN  NaN  NaN   B7   D7   F7\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ta-ZzM8IC-Yh",
+        "outputId": "0efd8445-3fa5-4ca2-9d32-570c114222d6"
+      },
+      "source": [
+        "# 행 기준으로 df1, df4 합치기\n",
+        "print('\\n#4 Concat df1, df4 by axis = 1')\n",
+        "result = pd.concat([df1, df4], axis = 1, ignore_index = True)\n",
+        "print(result)"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "#4 Concat df1, df4 by axis = 1\n",
+            "     0    1    2    3    4    5    6\n",
+            "0   A0   B0   C1   D0  NaN  NaN  NaN\n",
+            "1   A1   B1   C1   D1  NaN  NaN  NaN\n",
+            "2   A2   B2   C2   D2   B2   D2   F2\n",
+            "3   A3   B3   C3   D3   B3   D3   F3\n",
+            "6  NaN  NaN  NaN  NaN   B6   D6   F6\n",
+            "7  NaN  NaN  NaN  NaN   B7   D7   F7\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9rpQVu4zDEN6",
+        "outputId": "13ab34d5-8aa4-4c2f-c723-48571d76c256"
+      },
+      "source": [
+        "# 교집합 데이터 결합하기\n",
+        "print('\\n#5 Concat df1, df4 by join=inner')\n",
+        "result = pd.concat([df1, df4], join='inner')\n",
+        "print(result)"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "#5 Concat df1, df4 by join=inner\n",
+            "    B   D\n",
+            "0  B0  D0\n",
+            "1  B1  D1\n",
+            "2  B2  D2\n",
+            "3  B3  D3\n",
+            "2  B2  D2\n",
+            "3  B3  D3\n",
+            "6  B6  D6\n",
+            "7  B7  D7\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qG_tGekDDOhK"
       },
       "source": [
         ""
