Colaboratory를 통해 생성됨 - 데이터 합치기(2)

--- a/Class4.ipynb
+++ b/Class4.ipynb
@@ -4541,9 +4541,264 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "my8nPbU2DcR9"
+      },
+      "source": [
+        "## 데이터 합치기(2)"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "qG_tGekDDOhK"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qG_tGekDDOhK",
+        "outputId": "16e4f197-6b2e-438b-b5d5-bfda9c6604e0"
+      },
+      "source": [
+        "import pandas as pd\n",
+        "\n",
+        "# 실습 데이터 생성\n",
+        "stu1 = pd.DataFrame({'name':['Kim', 'Lee', 'Choi'], \n",
+        "                     'subject':['#101', '#201', '#101'], \n",
+        "                     'result':['pass','pass','fail']})\n",
+        "stu2 = pd.DataFrame({'name':['Kim', 'Hwang', 'Lee', 'Park'], \n",
+        "                     'language':['c','java','python','python'], \n",
+        "                     'score':[95,85,97,80]})\n",
+        "print('stu1')\n",
+        "print(stu1)\n",
+        "print('\\nstu2')\n",
+        "print(stu2)"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "stu1\n",
+            "   name subject result\n",
+            "0   Kim    #101   pass\n",
+            "1   Lee    #201   pass\n",
+            "2  Choi    #101   fail\n",
+            "\n",
+            "stu2\n",
+            "    name language  score\n",
+            "0    Kim        c     95\n",
+            "1  Hwang     java     85\n",
+            "2    Lee   python     97\n",
+            "3   Park   python     80\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "trM_Ny3bETXX",
+        "outputId": "fe66e885-ff74-4416-9e60-d49de40c3277"
+      },
+      "source": [
+        "# stu1, stu2 합치기\n",
+        "print('\\n#1 Merge stu1, stu2')\n",
+        "result = pd.merge(stu1, stu2)\n",
+        "print(result)"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "#1 Merge stu1, stu2\n",
+            "  name subject result language  score\n",
+            "0  Kim    #101   pass        c     95\n",
+            "1  Lee    #201   pass   python     97\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jd2x2D0IEcI4",
+        "outputId": "46cd9dab-f68a-4dfc-eff9-989b34f4f39b"
+      },
+      "source": [
+        "# stu1, stu2 합치기\n",
+        "print('\\n#1 Merge stu1, stu2')\n",
+        "result = pd.merge(stu1, stu2, on='name')\n",
+        "print(result)"
+      ],
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "#1 Merge stu1, stu2\n",
+            "  name subject result language  score\n",
+            "0  Kim    #101   pass        c     95\n",
+            "1  Lee    #201   pass   python     97\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 443
+        },
+        "id": "Cka6iM2tEhQQ",
+        "outputId": "709c5006-dac9-404a-ff29-91986e8d1212"
+      },
+      "source": [
+        "# stu1, stu2 합치기\n",
+        "print('\\n#1 Merge stu1, stu2')\n",
+        "result = pd.merge(stu1, stu2, on='subject')\n",
+        "print(result)"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "#1 Merge stu1, stu2\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "error",
+          "ename": "KeyError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-17-fb6df42daba2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# stu1, stu2 합치기\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'\\n#1 Merge stu1, stu2'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmerge\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstu1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstu2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mon\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'subject'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresult\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/pandas/core/reshape/merge.py\u001b[0m in \u001b[0;36mmerge\u001b[0;34m(left, right, how, on, left_on, right_on, left_index, right_index, sort, suffixes, copy, indicator, validate)\u001b[0m\n\u001b[1;32m     85\u001b[0m         \u001b[0mcopy\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcopy\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     86\u001b[0m         \u001b[0mindicator\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mindicator\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 87\u001b[0;31m         \u001b[0mvalidate\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mvalidate\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     88\u001b[0m     )\n\u001b[1;32m     89\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mop\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_result\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/pandas/core/reshape/merge.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, left, right, how, on, left_on, right_on, axis, left_index, right_index, sort, suffixes, copy, indicator, validate)\u001b[0m\n\u001b[1;32m    650\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mright_join_keys\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    651\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin_names\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 652\u001b[0;31m         ) = self._get_merge_keys()\n\u001b[0m\u001b[1;32m    653\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    654\u001b[0m         \u001b[0;31m# validate the merge keys dtypes. We may need to coerce\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/pandas/core/reshape/merge.py\u001b[0m in \u001b[0;36m_get_merge_keys\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1003\u001b[0m                     \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mis_rkey\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrk\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1004\u001b[0m                         \u001b[0;32mif\u001b[0m \u001b[0mrk\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1005\u001b[0;31m                             \u001b[0mright_keys\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mright\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_get_label_or_level_values\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrk\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1006\u001b[0m                         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1007\u001b[0m                             \u001b[0;31m# work-around for merge_asof(right_index=True)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36m_get_label_or_level_values\u001b[0;34m(self, key, axis)\u001b[0m\n\u001b[1;32m   1561\u001b[0m             \u001b[0mvalues\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maxes\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0maxis\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_level_values\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_values\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1562\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1563\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1564\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1565\u001b[0m         \u001b[0;31m# Check for duplicates\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mKeyError\u001b[0m: 'subject'"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lBDqZuNxEmt9",
+        "outputId": "8fd70333-e8eb-4947-b408-22c02e9a3e9f"
+      },
+      "source": [
+        "# key 값을 기준으로 stu1, stu2 합치기\n",
+        "print('\\n#2 Merge stu1, stu2 by key value')\n",
+        "result = pd.merge(stu1, stu2,\n",
+        "                  left_on=['subject'], \n",
+        "                  right_on = ['language'])\n",
+        "print(result)"
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "#2 Merge stu1, stu2 by key value\n",
+            "Empty DataFrame\n",
+            "Columns: [name_x, subject, result, name_y, language, score]\n",
+            "Index: []\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_q2k2xzEFIBq",
+        "outputId": "0baf9d15-83c0-471b-a38f-e31b40323b48"
+      },
+      "source": [
+        "# 합집합으로 데이터 합치기\n",
+        "print('\\n#3 Merge stu1, stu2 by how=outer')\n",
+        "result = pd.merge(stu1, stu2, on='name', how='outer')\n",
+        "print(result)"
+      ],
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "#3 Merge stu1, stu2 by how=outer\n",
+            "    name subject result language  score\n",
+            "0    Kim    #101   pass        c   95.0\n",
+            "1    Lee    #201   pass   python   97.0\n",
+            "2   Choi    #101   fail      NaN    NaN\n",
+            "3  Hwang     NaN    NaN     java   85.0\n",
+            "4   Park     NaN    NaN   python   80.0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kc9AZ_NWFUee",
+        "outputId": "7bfb45b3-cefe-4382-ee86-150291be3b31"
+      },
+      "source": [
+        "# stu2 기준으로 데이터 합치기\n",
+        "print('\\n#4 Merge stu1, stu2 by how=right')\n",
+        "result = pd.merge(stu1, stu2, on='name', how='right')\n",
+        "print(result)"
+      ],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "#4 Merge stu1, stu2 by how=right\n",
+            "    name subject result language  score\n",
+            "0    Kim    #101   pass        c     95\n",
+            "1  Hwang     NaN    NaN     java     85\n",
+            "2    Lee    #201   pass   python     97\n",
+            "3   Park     NaN    NaN   python     80\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BufYMws9Fg25"
       },
       "source": [
         ""
