Colaboratory를 통해 생성됨

--- a/Class1-1.ipynb
+++ b/Class1-1.ipynb
@@ -8,7 +8,7 @@
       "collapsed_sections": [],
       "toc_visible": true,
       "mount_file_id": "1ThUnLq2eUXmsQ7YfyLfHDwG2h0dDLvkh",
-      "authorship_tag": "ABX9TyNG2WstepUOkNg0Ggq8m5HE",
+      "authorship_tag": "ABX9TyN89ijF4H8UD/2aJ6uo+4WV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,7 +45,7 @@
         "id": "2HTLvxUtsV_E"
       },
       "source": [
-        "## Various operator"
+        "## 1. Various operator"
       ]
     },
     {
@@ -54,7 +54,7 @@
         "id": "7RYvaCJRP8hA"
       },
       "source": [
-        "## String"
+        "## 2. String"
       ]
     },
     {
@@ -426,7 +426,7 @@
         "id": "wqsntMnJQBw-"
       },
       "source": [
-        "## if statement"
+        "## 3. if statement"
       ]
     },
     {
@@ -515,7 +515,7 @@
         "id": "5-RPXmgoRQ49"
       },
       "source": [
-        "## List"
+        "## 4. List"
       ]
     },
     {
@@ -1378,7 +1378,7 @@
         "id": "uIPr0B-DZ535"
       },
       "source": [
-        "## Shallow, Deep Copy"
+        "## 5. Shallow, Deep Copy"
       ]
     },
     {
@@ -1488,7 +1488,7 @@
         "id": "owaq7wblms6c"
       },
       "source": [
-        "## Dictionary"
+        "## 6. Dictionary"
       ]
     },
     {
