Colaboratory를 통해 생성됨

--- a/Class1-2.ipynb
+++ b/Class1-2.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMmZEWPCFlCVMdj9E/7pH1K",
+      "authorship_tag": "ABX9TyMviuhua+HQvb7lizGxa1lO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,23 +30,12 @@
       ]
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "t8mm0ib0r6Lr"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "9uwwaQ4ktDen"
       },
       "source": [
-        "## Set, Enum Type"
+        "## 7. Set, Enum Type"
       ]
     },
     {
@@ -542,7 +531,7 @@
         "id": "Gsf0NwTFw9VG"
       },
       "source": [
-        "## Function"
+        "## 8. Function"
       ]
     },
     {
@@ -979,7 +968,7 @@
         "id": "z7ZqvRm_3Cte"
       },
       "source": [
-        "## Namespace, Scope"
+        "## 9. Namespace, Scope"
       ]
     },
     {
@@ -1152,7 +1141,7 @@
         "id": "J7s4PSfp4zwv"
       },
       "source": [
-        "## List Comprehension, Lambda, map, filter"
+        "## 10. List Comprehension, Lambda, map, filter"
       ]
     },
     {
@@ -1625,7 +1614,7 @@
         "id": "79TQEj-A8YDk"
       },
       "source": [
-        "## Class"
+        "## 11. Class"
       ]
     },
     {
@@ -2685,7 +2674,7 @@
         "id": "QQHerz6_tkAi"
       },
       "source": [
-        "## Iterable object"
+        "## 12. Iterable object"
       ]
     },
     {
@@ -3128,7 +3117,7 @@
         "id": "5PPqqqfsJq1u"
       },
       "source": [
-        "## Python Tips"
+        "## 13. Python Tips"
       ]
     },
     {
