Colaboratory를 통해 생성됨

--- a/Class2.ipynb
+++ b/Class2.ipynb
@@ -5,10 +5,9 @@
     "colab": {
       "name": "Class2.ipynb",
       "provenance": [],
-      "collapsed_sections": [
-        "QA2oX-_v6XRo"
-      ],
-      "authorship_tag": "ABX9TyM6HXU7IdwjaMId4vxmV1VF",
+      "collapsed_sections": [],
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyPPioqTU/mfGTQ7yew2elpJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,10 +32,19 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "xzzWijfEwDIR"
+      },
+      "source": [
+        "# 데이터 사이언스 개론"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "Coz4Oxpc6HgL"
       },
       "source": [
-        "### 빅데이터와 활용기술"
+        "## 1. 빅데이터와 활용기술"
       ]
     },
     {
@@ -195,7 +203,7 @@
         "id": "86QoH-xn9vVi"
       },
       "source": [
-        "### 데이터분석 프로세스"
+        "## 2. 데이터분석 프로세스"
       ]
     },
     {
@@ -356,7 +364,7 @@
         "id": "-EesIhhKLSUa"
       },
       "source": [
-        "### 데이터 전처리"
+        "## 3. 데이터 전처리"
       ]
     },
     {
@@ -485,7 +493,7 @@
         "id": "blZp6LyjMbTP"
       },
       "source": [
-        "### 기초통계 및 시각화"
+        "## 4. 기초통계 및 시각화"
       ]
     },
     {
@@ -652,7 +660,7 @@
         "id": "CHx573FWT2JS"
       },
       "source": [
-        "### 활용사례"
+        "## 5. 활용사례"
       ]
     },
     {
