Colaboratory를 통해 생성됨

--- a/Class3.ipynb
+++ b/Class3.ipynb
@@ -6,7 +6,8 @@
       "name": "Class3.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOIdxPZZo+ggHd6ao7qMGsw",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyMfytqptrxuFoSmpF5TcVaZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +35,7 @@
         "id": "mTxgZz4-UzDT"
       },
       "source": [
-        "### 데이터 분석을 위한 파이썬 라이브러리"
+        "# 데이터 분석을 위한 파이썬 라이브러리"
       ]
     },
     {
@@ -102,7 +103,7 @@
         "id": "jh_a6nYTWBCH"
       },
       "source": [
-        "### NumPy 라이브러리 소개"
+        "## 1. NumPy 라이브러리 소개"
       ]
     },
     {
@@ -247,7 +248,7 @@
         "id": "e5zoSOuAX5ZK"
       },
       "source": [
-        "### NumPy의 자료구조 : ndarray"
+        "## 2. NumPy의 자료구조 : ndarray"
       ]
     },
     {
@@ -353,7 +354,7 @@
       "source": [
         "import numpy as np"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -488,7 +489,7 @@
         "print('type = ', type(arr))\n",
         "print(\"shape: {}, size: {}, dtype: {}, dimension: {}\".format(arr.shape, arr.size, arr.dtype, arr.ndim))"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -533,7 +534,7 @@
         "print('type = ', type(arr))\n",
         "print(\"shape: {}, size: {}, dtype: {}, dimension: {}\".format(arr.shape, arr.size, arr.dtype, arr.ndim))"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -578,7 +579,7 @@
         "print('type = ', type(arr))\n",
         "print(\"shape: {}, size: {}, dtype: {}, dimension: {}\".format(arr.shape, arr.size, arr.dtype, arr.ndim))"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -603,7 +604,7 @@
         "id": "88ZcwiEHUpDh"
       },
       "source": [
-        "### NumPy 자료구조 : ndarray의 생성"
+        "## 3. NumPy 자료구조 : ndarray의 생성"
       ]
     },
     {
@@ -699,7 +700,7 @@
         "print('\\n Create ndarray by np.arange()')\n",
         "printinfo(arr)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -769,7 +770,7 @@
         "print('\\n Create ndarray by np.zeros()')\n",
         "printinfo(arr)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -807,7 +808,7 @@
         "print('\\n Create ndarray by np.zeros()')\n",
         "printinfo(arr)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -864,7 +865,7 @@
         "print('\\n Create ndarray by np.ones()')\n",
         "printinfo(arr)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -907,7 +908,7 @@
         "print('\\n Create ndarray by np.full()')\n",
         "printinfo(arr)"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -951,7 +952,7 @@
         "print('\\n Create ndarray by np.empty()')\n",
         "printinfo(arr)"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1009,7 +1010,7 @@
         "print('\\n Sample')\n",
         "printinfo(sample)"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1050,7 +1051,7 @@
         "print('\\n Create ndarray by np.ones_like()')\n",
         "printinfo(one_array)"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1087,7 +1088,7 @@
         "id": "GKBuQJ8iZGyl"
       },
       "source": [
-        "### NumPy 의 데이터 타입"
+        "## 4. NumPy 의 데이터 타입"
       ]
     },
     {
@@ -1138,7 +1139,7 @@
         "data = [[[1,2,3],[4,5,6]],[[3,2,1],[4,5,6]]]\n",
         "arr = np.array(data, dtype=float)"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1161,7 +1162,7 @@
         "print('Complex: ', cpx_arr)\n",
         "print('String: ', str_arr)"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1210,7 +1211,7 @@
         "print(origin)\n",
         "print('dtype: ', origin.dtype)"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1252,7 +1253,7 @@
         "print('\\nOriginal data')\n",
         "print(origin)"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1274,7 +1275,7 @@
         "id": "C8OXtpJ4bO-m"
       },
       "source": [
-        "### Ndarray의 reshape"
+        "## 5. Ndarray의 reshape"
       ]
     },
     {
@@ -1329,7 +1330,7 @@
         "print('\\nOriginal ndarray')\n",
         "printinfo(origin_arr)"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1369,7 +1370,7 @@
         "print('\\nReshape ndarray')\n",
         "printinfo(reshape_arr)"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1440,7 +1441,7 @@
         "print('\\nReshape(-1,N) to 2D array')\n",
         "printinfo(reshape_arr)"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1474,7 +1475,7 @@
         "id": "-smP9Yjad46Q"
       },
       "source": [
-        "### NumPy 기본 연산"
+        "## 6. NumPy 기본 연산"
       ]
     },
     {
@@ -1538,7 +1539,7 @@
         "print('\\nB---')\n",
         "print(b)"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1590,7 +1591,7 @@
         "print('\\nResult of np.add(a,b)')\n",
         "print(result)"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1642,7 +1643,7 @@
         "print('\\nResult of np.divide(a,b)')\n",
         "print(result)"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1694,7 +1695,7 @@
         "print('\\nResult of comparison operator(>)')\n",
         "print(result)"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1724,7 +1725,7 @@
         "print('\\nResult of comparison operator(!=)')\n",
         "print(result)"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1782,7 +1783,7 @@
         "  for j in range(len(arr[i])) : \n",
         "    result = arr[i][j] + 1"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1799,7 +1800,7 @@
         "# numpy\n",
         "result = arr + 1"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -1853,7 +1854,7 @@
         "stop = time.time()\n",
         "print(\"\\nPython(ms):\", (stop - start)*1000)"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1882,7 +1883,7 @@
         "stop = time.time()\n",
         "print(\"NumPy(ms):\", (stop-start)*1000)"
       ],
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1947,7 +1948,7 @@
         "print('\\nHelp on numpy.sqrt()')\n",
         "help(np.sqrt)"
       ],
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2616,7 +2617,7 @@
         "id": "dvQ-Bl4YwjlK"
       },
       "source": [
-        "### NumPy 집계 함수"
+        "## 7. NumPy 집계 함수"
       ]
     },
     {
@@ -2683,7 +2684,7 @@
         "print('Sample')\n",
         "print(sample)"
       ],
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2727,7 +2728,7 @@
         "print('max : ', sample.max())\n",
         "print('min : ', sample.min())"
       ],
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2773,7 +2774,7 @@
         "print('max : ', sample.max(axis = 0))\n",
         "print('min : ', sample.min(axis = 0))"
       ],
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2819,7 +2820,7 @@
         "print('max : ', sample.max(axis = 1))\n",
         "print('min : ', sample.min(axis = 1))"
       ],
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2851,7 +2852,7 @@
         "id": "21PNgOMQy66M"
       },
       "source": [
-        "### 데이터 정렬"
+        "## 8. 데이터 정렬"
       ]
     },
     {
@@ -2871,7 +2872,7 @@
         "print('1D-Array Sample')\n",
         "print(sample)"
       ],
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2915,7 +2916,7 @@
         "print('Result : ', result)\n",
         "print('Original : ', sample)"
       ],
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2956,7 +2957,7 @@
         "print('Original :', sample)\n",
         "print('Result :', sample[::-1])"
       ],
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2986,7 +2987,7 @@
         "print('\\nDescending Order')\n",
         "print('Descending :', result)"
       ],
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3028,7 +3029,7 @@
         "print('\\n2D-Array Sample')\n",
         "print(sample)"
       ],
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3058,7 +3059,7 @@
         "print('\\nnp.sort(axis = 0) :')\n",
         "print(result)"
       ],
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3088,7 +3089,7 @@
         "print('\\nnp.sort(axis=1) :')\n",
         "print(result)"
       ],
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3124,7 +3125,7 @@
         "name = np.array(['John', 'Samuel', 'Kate', 'Mike', 'Sarah'])\n",
         "score = np.array([78,84,96,88,82])"
       ],
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3143,7 +3144,7 @@
         "print('\\nnp.argsort()')\n",
         "print('sort indexes :', sort_indexes)"
       ],
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3169,7 +3170,7 @@
         "# 인덱스 값을 통해 컬럼명 조회\n",
         "print('sort values :', name[sort_indexes])"
       ],
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3213,7 +3214,7 @@
         "x = x.reshape(4,2,3)\n",
         "print(x)"
       ],
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3247,7 +3248,7 @@
         "axis_0 = x.sum(axis = 0)\n",
         "print(axis_0)"
       ],
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3271,7 +3272,7 @@
       "source": [
         "print(axis_0.shape)"
       ],
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
