--- a/Class6.ipynb
+++ b/Class6.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Class6.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyONevQC8yaZQ3uHsQBKuZFP",
+      "authorship_tag": "ABX9TyO3yk2KFutNLSXJH9lxHB7m",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1067,9 +1067,476 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "lukk0Z1aqdHh"
+      },
+      "source": [
+        "## 데이터 인코딩"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "S6c80y6-qevc"
+      },
+      "source": [
+        "- 데이터 인코딩\n",
+        "- 범주형 데이터\n",
+        "- 범주형 데이터와 머신러닝\n",
+        "- 라벨 인코딩(Label Encoding)\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "pQVEdpi4qxep"
+      },
+      "source": [
+        "- 사이킷런을 활용한 라벨 인코딩"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "P6dFRg-kqH80"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "P6dFRg-kqH80",
+        "outputId": "8b9bcc55-778b-4d4c-9f8e-bbb75f9c366c"
+      },
+      "source": [
+        "import seaborn as sns\n",
+        "\n",
+        "# seaborn 내장된 tips 데이터셋 로딩\n",
+        "tips = sns.load_dataset('tips')\n",
+        "print(tips.head(5))"
+      ],
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "   total_bill   tip     sex smoker  day    time  size\n",
+            "0       16.99  1.01  Female     No  Sun  Dinner     2\n",
+            "1       10.34  1.66    Male     No  Sun  Dinner     3\n",
+            "2       21.01  3.50    Male     No  Sun  Dinner     3\n",
+            "3       23.68  3.31    Male     No  Sun  Dinner     2\n",
+            "4       24.59  3.61  Female     No  Sun  Dinner     4\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Ds4N50zqq4pa",
+        "outputId": "6e1df295-c5ba-434d-a7a0-1dec47aa2cf5"
+      },
+      "source": [
+        "print('Tips Categories:\\n', tips['day'].unique())"
+      ],
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Tips Categories:\n",
+            " ['Sun', 'Sat', 'Thur', 'Fri']\n",
+            "Categories (4, object): ['Sun', 'Sat', 'Thur', 'Fri']\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kyXulMarq9C1"
+      },
+      "source": [
+        "from sklearn.preprocessing import LabelEncoder\n",
+        "\n",
+        "# 인코딩할 데이터 준비\n",
+        "items = tips['day']\n",
+        "\n",
+        "# LabelEncoder 객체 생성\n",
+        "encoder = LabelEncoder()\n",
+        "\n",
+        "# .fit 메소드에 인코딩할 데이터 전달\n",
+        "encoder.fit(items)\n",
+        "\n",
+        "# .tranform 메소드를 통해 데이터 변환\n",
+        "labels = encoder.transform(items)"
+      ],
+      "execution_count": 26,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-j1V0jkRrM41",
+        "outputId": "4a853f7b-e5d4-4a00-afbf-d18e9ed36250"
+      },
+      "source": [
+        "# .transform() 변환 결과 출력\n",
+        "print('Label Encoding Result:\\n', labels)"
+      ],
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Label Encoding Result:\n",
+            " [2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1\n",
+            " 1 1 1 1 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1\n",
+            " 1 1 1 3 3 3 3 3 3 3 3 3 3 3 3 3 0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 1 1 1 1 1 1\n",
+            " 1 2 2 2 2 2 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3\n",
+            " 3 3 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 1 1 1 1 2 2 2 2 2 2 2 2 2 2 2 2 2\n",
+            " 2 2 2 2 2 2 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 1 1 1 1 1 1 1 1 1 1 1 1 1 1 0 0\n",
+            " 0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 3]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Yr7oMzRSrUdg",
+        "outputId": "2deff128-a6b3-41f9-f2c5-ba60d48100db"
+      },
+      "source": [
+        "# 인코딩된 수치형 데이터의 실제 클래스 확인\n",
+        "print('Encoding classes:', encoder.classes_)\n",
+        "\n",
+        "# 디코딩 결과 확인\n",
+        "print('Decoding result:', encoder.inverse_transform([2]))"
+      ],
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Encoding classes: ['Fri' 'Sat' 'Sun' 'Thur']\n",
+            "Decoding result: ['Sun']\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Wp1wv-xFrdYu"
+      },
+      "source": [
+        "labels = labels.reshape(-1, 1)"
+      ],
+      "execution_count": 29,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bJBOndUJriSw"
+      },
+      "source": [
+        "from sklearn.preprocessing import OneHotEncoder\n",
+        "\n",
+        "# OneHotEncoder 객체 생성\n",
+        "one_hot_encoder = OneHotEncoder()\n",
+        "\n",
+        "# .fit 메소드에 인코딩할 데이터 전달\n",
+        "one_hot_encoder.fit(labels)\n",
+        "\n",
+        "# .transform 메소드를 통해 데이터 변환\n",
+        "one_hot_labels = one_hot_encoder.transform(labels)"
+      ],
+      "execution_count": 33,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MYwPza2KrsRT",
+        "outputId": "25302aa6-797b-4e1c-e649-5fde2636cbe9"
+      },
+      "source": [
+        "# 결과 출력\n",
+        "print(one_hot_labels.toarray())"
+      ],
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[[0. 0. 1. 0.]\n",
+            " [0. 0. 1. 0.]\n",
+            " [0. 0. 1. 0.]\n",
+            " [0. 0. 1. 0.]\n",
+            " [0. 0. 1. 0.]\n",
+            " [0. 0. 1. 0.]\n",
+            " [0. 0. 1. 0.]\n",
+            " [0. 0. 1. 0.]\n",
+            " [0. 0. 1. 0.]\n",
+            " [0. 0. 1. 0.]\n",
+            " [0. 0. 1. 0.]\n",
+            " [0. 0. 1. 0.]\n",
+            " [0. 0. 1. 0.]\n",
+            " [0. 0. 1. 0.]\n",
+            " [0. 0. 1. 0.]\n",
+            " [0. 0. 1. 0.]\n",
+            " [0. 0. 1. 0.]\n",
+            " [0. 0. 1. 0.]\n",
+            " [0. 0. 1. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 0. 1. 0.]\n",
+            " [0. 0. 1. 0.]\n",
+            " [0. 0. 1. 0.]\n",
+            " [0. 0. 1. 0.]\n",
+            " [0. 0. 1. 0.]\n",
+            " [0. 0. 1. 0.]\n",
+            " [0. 0. 1. 0.]\n",
+            " [0. 0. 1. 0.]\n",
+            " [0. 0. 1. 0.]\n",
+            " [0. 0. 1. 0.]\n",
+            " [0. 0. 1. 0.]\n",
+            " [0. 0. 1. 0.]\n",
+            " [0. 0. 1. 0.]\n",
+            " [0. 0. 1. 0.]\n",
+            " [0. 0. 1. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 0. 0. 1.]\n",
+            " [0. 0. 0. 1.]\n",
+            " [0. 0. 0. 1.]\n",
+            " [0. 0. 0. 1.]\n",
+            " [0. 0. 0. 1.]\n",
+            " [0. 0. 0. 1.]\n",
+            " [0. 0. 0. 1.]\n",
+            " [0. 0. 0. 1.]\n",
+            " [0. 0. 0. 1.]\n",
+            " [0. 0. 0. 1.]\n",
+            " [0. 0. 0. 1.]\n",
+            " [0. 0. 0. 1.]\n",
+            " [0. 0. 0. 1.]\n",
+            " [1. 0. 0. 0.]\n",
+            " [1. 0. 0. 0.]\n",
+            " [1. 0. 0. 0.]\n",
+            " [1. 0. 0. 0.]\n",
+            " [1. 0. 0. 0.]\n",
+            " [1. 0. 0. 0.]\n",
+            " [1. 0. 0. 0.]\n",
+            " [1. 0. 0. 0.]\n",
+            " [1. 0. 0. 0.]\n",
+            " [1. 0. 0. 0.]\n",
+            " [1. 0. 0. 0.]\n",
+            " [1. 0. 0. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 0. 1. 0.]\n",
+            " [0. 0. 1. 0.]\n",
+            " [0. 0. 1. 0.]\n",
+            " [0. 0. 1. 0.]\n",
+            " [0. 0. 1. 0.]\n",
+            " [0. 0. 0. 1.]\n",
+            " [0. 0. 0. 1.]\n",
+            " [0. 0. 0. 1.]\n",
+            " [0. 0. 0. 1.]\n",
+            " [0. 0. 0. 1.]\n",
+            " [0. 0. 0. 1.]\n",
+            " [0. 0. 0. 1.]\n",
+            " [0. 0. 0. 1.]\n",
+            " [0. 0. 0. 1.]\n",
+            " [0. 0. 0. 1.]\n",
+            " [0. 0. 0. 1.]\n",
+            " [0. 0. 0. 1.]\n",
+            " [0. 0. 0. 1.]\n",
+            " [0. 0. 0. 1.]\n",
+            " [0. 0. 0. 1.]\n",
+            " [0. 0. 0. 1.]\n",
+            " [0. 0. 0. 1.]\n",
+            " [0. 0. 0. 1.]\n",
+            " [0. 0. 0. 1.]\n",
+            " [0. 0. 0. 1.]\n",
+            " [0. 0. 0. 1.]\n",
+            " [0. 0. 0. 1.]\n",
+            " [0. 0. 0. 1.]\n",
+            " [0. 0. 0. 1.]\n",
+            " [0. 0. 0. 1.]\n",
+            " [0. 0. 0. 1.]\n",
+            " [0. 0. 0. 1.]\n",
+            " [0. 0. 0. 1.]\n",
+            " [0. 0. 0. 1.]\n",
+            " [0. 0. 0. 1.]\n",
+            " [0. 0. 0. 1.]\n",
+            " [0. 0. 0. 1.]\n",
+            " [0. 0. 0. 1.]\n",
+            " [0. 0. 1. 0.]\n",
+            " [0. 0. 1. 0.]\n",
+            " [0. 0. 1. 0.]\n",
+            " [0. 0. 1. 0.]\n",
+            " [0. 0. 1. 0.]\n",
+            " [0. 0. 1. 0.]\n",
+            " [0. 0. 1. 0.]\n",
+            " [0. 0. 1. 0.]\n",
+            " [0. 0. 1. 0.]\n",
+            " [0. 0. 1. 0.]\n",
+            " [0. 0. 1. 0.]\n",
+            " [0. 0. 1. 0.]\n",
+            " [0. 0. 1. 0.]\n",
+            " [0. 0. 1. 0.]\n",
+            " [0. 0. 1. 0.]\n",
+            " [0. 0. 1. 0.]\n",
+            " [0. 0. 1. 0.]\n",
+            " [0. 0. 1. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 0. 1. 0.]\n",
+            " [0. 0. 1. 0.]\n",
+            " [0. 0. 1. 0.]\n",
+            " [0. 0. 1. 0.]\n",
+            " [0. 0. 1. 0.]\n",
+            " [0. 0. 1. 0.]\n",
+            " [0. 0. 1. 0.]\n",
+            " [0. 0. 1. 0.]\n",
+            " [0. 0. 1. 0.]\n",
+            " [0. 0. 1. 0.]\n",
+            " [0. 0. 1. 0.]\n",
+            " [0. 0. 1. 0.]\n",
+            " [0. 0. 1. 0.]\n",
+            " [0. 0. 1. 0.]\n",
+            " [0. 0. 1. 0.]\n",
+            " [0. 0. 1. 0.]\n",
+            " [0. 0. 1. 0.]\n",
+            " [0. 0. 1. 0.]\n",
+            " [0. 0. 1. 0.]\n",
+            " [0. 0. 0. 1.]\n",
+            " [0. 0. 0. 1.]\n",
+            " [0. 0. 0. 1.]\n",
+            " [0. 0. 0. 1.]\n",
+            " [0. 0. 0. 1.]\n",
+            " [0. 0. 0. 1.]\n",
+            " [0. 0. 0. 1.]\n",
+            " [0. 0. 0. 1.]\n",
+            " [0. 0. 0. 1.]\n",
+            " [0. 0. 0. 1.]\n",
+            " [0. 0. 0. 1.]\n",
+            " [0. 0. 0. 1.]\n",
+            " [0. 0. 0. 1.]\n",
+            " [0. 0. 0. 1.]\n",
+            " [0. 0. 0. 1.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [1. 0. 0. 0.]\n",
+            " [1. 0. 0. 0.]\n",
+            " [1. 0. 0. 0.]\n",
+            " [1. 0. 0. 0.]\n",
+            " [1. 0. 0. 0.]\n",
+            " [1. 0. 0. 0.]\n",
+            " [1. 0. 0. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 1. 0. 0.]\n",
+            " [0. 0. 0. 1.]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "FuVTjqocvwBJ"
       },
       "source": [
         ""
