Colaboratory를 통해 생성됨 - 회귀 모델의 추정과 평가

--- a/Class6.ipynb
+++ b/Class6.ipynb
@@ -6,7 +6,7 @@
       "name": "Class6.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOH1jrNE65MeF1o7+n5DMZU",
+      "authorship_tag": "ABX9TyNiNF13Bhk3qceDvo0hyNci",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1988,6 +1988,33 @@
             "needs_background": "light"
           }
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "nrPg3V0Ez3KB"
+      },
+      "source": [
+        "## 회귀모델의 추정과 평가"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "IntWgjRSz6BG"
+      },
+      "source": [
+        "- 회귀(Regression)의 목표\n",
+        "- 선형회귀 계수의 추정\n",
+        "- 선형회귀 모델의 평가\n",
+        "- 용어 정리 : 오차와 잔차\n",
+        "- 최적의 회귀 분석 모델\n",
+        "- 머신러닝은 회귀 계수를 어떻게 추정하는가?\n",
+        "- 손실함수(Loss Function)\n",
+        "- 회귀 계수의 추정\n",
+        "- 경사하강법(Gradient Decent)\n",
+        "- 회귀 분석을 위한 평가 지표"
       ]
     },
     {
